# Comfyui_MiniCPMv2_6-prompt-generator

./: README.md  nodes.py  pyproject.toml  requirements.txt
workflow/: MiniCPMv2_6-prompt-generator.json  prompt-generator-batch-Tagger.json
